--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     }
   },
   "dependencies": {
+    "@pbe/react-yandex-maps": "^1.2.5",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^6.1.4",
